# Pystruct

./: .gitignore  LISENCE  README.md  pyproject.toml
pystruct/: cli.py  main.py  variables.py
