[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystruct"
version = "0.2.0"
description = "Automation for structure folder"
dependencies = []

[project.scripts]
pystruct = "pystruct.cli:main"

[tool.setuptools.packages.find]
include = ["pystruct*"]