[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystruct"
version = "0.4.0"
description = "Automation for structure folder"
dependencies = [
    "ricgh
]

[project.scripts]
pystruct = "pystruct.cli:main"

[tool.setuptools.packages.find]
include = ["pystruct*"]